@@ -15,27 +15,27 @@
  */
 package io.micronaut.ast.groovy.visitor;
 
-import io.micronaut.ast.groovy.utils.AstAnnotationUtils;
-import io.micronaut.ast.groovy.utils.AstGenericUtils;
-import io.micronaut.ast.groovy.utils.ExtendedParameter;
 import io.micronaut.core.annotation.AnnotationMetadata;
+import io.micronaut.core.annotation.Internal;
+import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.util.ArrayUtils;
-import io.micronaut.core.util.CollectionUtils;
 import io.micronaut.inject.ast.ClassElement;
 import io.micronaut.inject.ast.ElementModifier;
 import io.micronaut.inject.ast.GenericPlaceholderElement;
 import io.micronaut.inject.ast.MethodElement;
 import io.micronaut.inject.ast.ParameterElement;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
 import org.codehaus.groovy.ast.ClassNode;
 import org.codehaus.groovy.ast.GenericsType;
 import org.codehaus.groovy.ast.MethodNode;
 import org.codehaus.groovy.ast.Parameter;
 
-import io.micronaut.core.annotation.NonNull;
-
-import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
  * A method element returning data from a {@link MethodNode}.
@@ -43,24 +43,64 @@ import java.util.stream.Collectors;
  * @author James Kleeh
  * @since 1.0
  */
+@Internal
 public class GroovyMethodElement extends AbstractGroovyElement implements MethodElement {
 
+    protected ParameterElement[] parameters;
     private final MethodNode methodNode;
-    private final GroovyClassElement declaringClass;
-    private Map<String, ClassNode> genericsSpec = null;
-    private ClassElement declaringElement;
-    private ParameterElement[] parameters;
+    private final GroovyClassElement owningType;
+    private ClassElement declaringType;
+    private Map<String, ClassElement> declaredTypeArguments;
+    private Map<String, ClassElement> typeArguments;
+    @Nullable
+    private ClassElement returnType;
+    @Nullable
+    private ClassElement genericReturnType;
 
     /**
-     * @param declaringClass     The declaring class
+     * @param owningType         The owning type
      * @param visitorContext     The visitor context
+     * @param nativeElement      The native element
      * @param methodNode         The {@link MethodNode}
      * @param annotationMetadata The annotation metadata
      */
-    GroovyMethodElement(GroovyClassElement declaringClass, GroovyVisitorContext visitorContext, MethodNode methodNode, AnnotationMetadata annotationMetadata) {
-        super(visitorContext, methodNode, annotationMetadata);
+    GroovyMethodElement(GroovyClassElement owningType,
+                        GroovyVisitorContext visitorContext,
+                        GroovyNativeElement nativeElement,
+                        MethodNode methodNode,
+                        ElementAnnotationMetadataFactory annotationMetadata) {
+        super(visitorContext, nativeElement, annotationMetadata);
         this.methodNode = methodNode;
-        this.declaringClass = declaringClass;
+        this.owningType = owningType;
+    }
+
+    @Override
+    protected AbstractGroovyElement copyConstructor() {
+        return new GroovyMethodElement(owningType, visitorContext, getNativeType(), methodNode, elementAnnotationMetadataFactory);
+    }
+
+    @Override
+    protected void copyValues(AbstractGroovyElement element) {
+        ((GroovyMethodElement) element).parameters = parameters;
+    }
+
+    @Override
+    public MethodElement withAnnotationMetadata(AnnotationMetadata annotationMetadata) {
+        return (MethodElement) super.withAnnotationMetadata(annotationMetadata);
+    }
+
+    @Override
+    public MethodElement withParameters(ParameterElement... newParameters) {
+        GroovyMethodElement methodElement = (GroovyMethodElement) copy();
+        methodElement.parameters = newParameters;
+        return methodElement;
+    }
+
+    @Override
+    public MethodElement withNewOwningType(ClassElement owningType) {
+        GroovyMethodElement groovyMethodElement = new GroovyMethodElement((GroovyClassElement) owningType, visitorContext, getNativeType(), methodNode, elementAnnotationMetadataFactory);
+        copyValues(groovyMethodElement);
+        return groovyMethodElement;
     }
 
     @Override
@@ -68,11 +108,8 @@ public class GroovyMethodElement extends AbstractGroovyElement implements Method
         final ClassNode[] exceptions = methodNode.getExceptions();
         if (ArrayUtils.isNotEmpty(exceptions)) {
             return Arrays.stream(exceptions)
-                    .map(cn -> getGenericElement(cn, visitorContext.getElementFactory().newClassElement(
-                            cn,
-                            AnnotationMetadata.EMPTY_METADATA,
-                            Collections.emptyMap()
-                    ))).toArray(ClassElement[]::new);
+                    .map(cn -> newClassElement(cn, getDeclaringType().getTypeArguments()))
+                    .toArray(ClassElement[]::new);
         }
         return ClassElement.ZERO_CLASS_ELEMENTS;
     }
@@ -84,7 +121,11 @@ public class GroovyMethodElement extends AbstractGroovyElement implements Method
 
     @Override
     public String toString() {
-        return methodNode.toString();
+        ClassNode declaringClass = methodNode.getDeclaringClass();
+        if (declaringClass == null) {
+            declaringClass = owningType.classNode;
+        }
+        return declaringClass.getName() + "." + methodNode.getName() + "(..)";
     }
 
     @Override
@@ -104,12 +145,17 @@ public class GroovyMethodElement extends AbstractGroovyElement implements Method
 
     @Override
     public boolean isPublic() {
-        return methodNode.isPublic() || methodNode.isSyntheticPublic();
+        return methodNode.isPublic() || (methodNode.isSyntheticPublic() && !isPackagePrivate());
     }
 
     @Override
     public boolean isPrivate() {
         return methodNode.isPrivate();
+    }
+
+    @Override
+    public boolean isPackagePrivate() {
+        return methodNode.isPackageScope();
     }
 
     @Override
@@ -123,117 +169,84 @@ public class GroovyMethodElement extends AbstractGroovyElement implements Method
     }
 
     @Override
-    public Object getNativeType() {
-        return methodNode;
+    public boolean isDefault() {
+        return !isAbstract() && getDeclaringType().isInterface();
+    }
+
+    @Override
+    public Map<String, ClassElement> getDeclaredTypeArguments() {
+        if (declaredTypeArguments == null) {
+            declaredTypeArguments = resolveMethodTypeArguments(getNativeType(), methodNode, getDeclaringType().getTypeArguments());
+        }
+        return declaredTypeArguments;
+    }
+
+    @Override
+    public Map<String, ClassElement> getTypeArguments() {
+        if (typeArguments == null) {
+            typeArguments = MethodElement.super.getTypeArguments();
+        }
+        return typeArguments;
     }
 
     @NonNull
     @Override
     public ClassElement getGenericReturnType() {
-        ClassNode returnType = methodNode.getReturnType();
-        ClassElement rawElement = getReturnType();
-        return getGenericElement(returnType, rawElement);
-    }
-
-    /**
-     * Obtains the generic element if present otherwise returns the raw element.
-     *
-     * @param type       The type
-     * @param rawElement The raw element
-     * @return The class element
-     */
-    @NonNull
-    ClassElement getGenericElement(@NonNull ClassNode type, @NonNull ClassElement rawElement) {
-        Map<String, ClassNode> genericsSpec = getGenericsSpec();
-
-        return getGenericElement(sourceUnit, type, rawElement, genericsSpec);
-    }
-
-    /**
-     * Resolves the generics spec for this method.
-     *
-     * @return The generic spec
-     */
-    @NonNull
-    Map<String, ClassNode> getGenericsSpec() {
-        if (genericsSpec == null) {
-            Map<String, Map<String, ClassNode>> info = declaringClass.getGenericTypeInfo();
-            if (CollectionUtils.isNotEmpty(info)) {
-                Map<String, ClassNode> typeGenericInfo = info.get(methodNode.getDeclaringClass().getName());
-                if (CollectionUtils.isNotEmpty(typeGenericInfo)) {
-
-                    genericsSpec = AstGenericUtils.createGenericsSpec(methodNode, new HashMap<>(typeGenericInfo));
-                }
-            }
-
-            if (genericsSpec == null) {
-                genericsSpec = Collections.emptyMap();
-            }
-        }
-        return genericsSpec;
+        return newClassElement(methodNode.getReturnType(), getTypeArguments());
     }
 
     @Override
     @NonNull
     public ClassElement getReturnType() {
-        return visitorContext.getElementFactory().newClassElement(methodNode.getReturnType(), AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, methodNode.getReturnType()));
+        return newClassElement(methodNode.getReturnType());
     }
 
     @Override
     public ParameterElement[] getParameters() {
         Parameter[] parameters = methodNode.getParameters();
         if (this.parameters == null) {
-            this.parameters = Arrays.stream(parameters).map((Function<Parameter, ParameterElement>) parameter ->
-                    new GroovyParameterElement(
-                            this,
-                            visitorContext,
-                            parameter,
-                            AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, new ExtendedParameter(methodNode, parameter))
-                    )
-            ).toArray(ParameterElement[]::new);
+            this.parameters = Arrays.stream(parameters).map(this::newParameter).toArray(ParameterElement[]::new);
         }
-
         return this.parameters;
     }
 
-    @Override
-    public MethodElement withNewParameters(ParameterElement... newParameters) {
-        final ParameterElement[] existing = getParameters();
-        return new GroovyMethodElement(declaringClass, visitorContext, methodNode, getAnnotationMetadata()) {
-            @Override
-            public ParameterElement[] getParameters() {
-                return ArrayUtils.concat(existing, newParameters);
-            }
-        };
+    private GroovyParameterElement newParameter(Parameter parameter) {
+        return new GroovyParameterElement(
+                this,
+                visitorContext,
+                new GroovyNativeElement.Parameter(parameter, methodNode),
+                parameter,
+                elementAnnotationMetadataFactory
+        );
     }
 
     @Override
     public ClassElement getDeclaringType() {
-        if (this.declaringElement == null) {
-            this.declaringElement = visitorContext.getElementFactory().newClassElement(
-                    methodNode.getDeclaringClass(),
-                    AstAnnotationUtils.getAnnotationMetadata(
-                            sourceUnit,
-                            compilationUnit,
-                            methodNode.getDeclaringClass()
-                    )
-            );
+        if (declaringType == null) {
+            ClassNode declaringClassNode = methodNode.getDeclaringClass();
+            if (declaringClassNode == null) {
+                return owningType;
+            }
+            Map<String, ClassElement> typeArguments = getOwningType().getTypeArguments(declaringClassNode.getName());
+            declaringType = newClassElement(declaringClassNode, typeArguments);
         }
-        return this.declaringElement;
+        return declaringType;
     }
 
     @Override
-    public ClassElement getOwningType() {
-        return declaringClass;
+    public GroovyClassElement getOwningType() {
+        return owningType;
     }
 
     @Override
     public List<? extends GenericPlaceholderElement> getDeclaredTypeVariables() {
         GenericsType[] genericsTypes = methodNode.getGenericsTypes();
-        return genericsTypes == null ?
-                Collections.emptyList() :
-                Arrays.stream(genericsTypes)
-                        .map(gt -> (GenericPlaceholderElement) visitorContext.getElementFactory().newClassElement(gt.getType(), AnnotationMetadata.EMPTY_METADATA))
-                        .collect(Collectors.toList());
+        if (genericsTypes == null) {
+            return Collections.emptyList();
+        }
+        return Arrays.stream(genericsTypes)
+                .map(gt -> (GenericPlaceholderElement) newClassElement(gt))
+                .toList();
     }
+
 }
